Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4953

QMessageBox can not be closed/dismissed on touch phones if any widget is fullscreen

    XMLWordPrintable

Details

    • 5a6acc0ba1ed3b056f4c7a9c37481f4cb347a352

    Description

      The problem is that any fullscreen widget will cause the softkeys to be hidden, and on touch phones, this means they are also not clickable.

      This program demonstrates the problem:

      int main(int argc, char **argv)
      {
          QApplication app(argc, argv);
          QWidget w;
          w.showFullScreen();
          QMessageBox::information(&w, "Hello", "World");
          return app.exec();
      }
      

      There are several ways one could fix this:
      1. Don't use softkeys when a widget is fullscreen. Use the default Qt buttons instead.
      2. Make the softkeys reappear when the currently focused widget is not a fullscreen widget.

      Attachments

        1. ScreenShot017.png
          364 kB
          Janne Anttila
        2. ScreenShot018.png
          333 kB
          Janne Anttila
        3. QMBox.zip
          28 kB
          Jaakko Koskenkorva
        4. QMBox_463.png
          46 kB
          Jaakko Koskenkorva
        5. QMBox_472.png
          48 kB
          Jaakko Koskenkorva
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            e0348803 Miikka Heikkinen
            axisnokia axisnokia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes