Fix for softkey visibility when dialog launched from fullscreen widget.

Softkeys should be always the topmost window in order to be visible.
For example when QMessageBox is launched from fullscreen window,
we need to make sure that softkey is located on top of window tree.

Task-number: QTBUG-4953
Reviewed-by: Jason Barron